objects/Account.object
<CustomObject>
    <fields>
        <fullName>First_Entity_Formation_or_Tax_Sale__c</fullName>
        <label>First Entity Formation or Tax Sale</label>
        <summarizedField>Opportunity.First_Transaction__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Entity Formation, Tax Compliance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.ChargentSFA__Transaction_Total__c</field>
            <operation>greaterOrEqual</operation>
            <value>1500</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Renewal_Closed_Sale_Date__c</fullName>
        <label>First Renewal Closed Sale Date</label>
        <summarizedField>Opportunity.First_Transaction__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>State Renewal, Standard Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fix_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this in a data load process to trigger an update of the Client&apos;s team information.</description>
        <label>Fix Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formation_Kit_Task_ID__c</fullName>
        <label>Formation Kit Task ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Field for Google Analytics</description>
        <label>GCLID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Google_Analytics_Campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Analytics_Content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Analytics_Medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Analytics_Source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Analytics_Term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Green_Corp_HQ_Date__c</fullName>
        <description>Stores the date when the Vertucci service items where first closed won.</description>
        <label>Green Corp HQ Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Trustee__c</fullName>
        <label>Has Trustee</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_brick_and_mortar_business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do the Client have brick and mortar business?</description>
        <label>Has brick and mortar business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_do_they_file_their_taxes__c</fullName>
        <label>How do they file their taxes?</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>If_yes_what_version__c</fullName>
        <label>If yes, what version?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important_Notes__c</fullName>
        <inlineHelpText>Extremely important information regarding a client&apos;s account goes here.  Marriage, divorce, separation from business partner, deaths, etc.  Notes regarding renewals or general phone calls get logged in the activity history.</inlineHelpText>
        <label>Important Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Inactive_Client__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This field is updated once per night through an automated process. Clients will be marked inactive or active depending on whether they meet Sales criteria at the end of the business day. It is not meant to be changed manually.</inlineHelpText>
        <label>Inactive Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infinity_Membership_Count__c</fullName>
        <label>Infinity Membership Count</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Infinity Subscription</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Infinity_Memebership__c</field>
            <operation>equals</operation>
            <value>Free, Stock Pro, Real Estate Pro, 360</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Infusionsoft_Contact_Id__c</fullName>
        <label>Infusionsoft Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infusionsoft_Event_City__c</fullName>
        <label>Infusionsoft Event City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infusionsoft_Lead_Source__c</fullName>
        <label>Infusionsoft Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infusionsoft_Source_Event_Date__c</fullName>
        <label>Infusionsoft Source Event Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infusionsoft_Tag_Names__c</fullName>
        <label>Infusionsoft Tag Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Source_Client__c</fullName>
        <description>This is the how the Client initially came to Anderson.</description>
        <inlineHelpText>This is the how the Client initially came to Anderson.</inlineHelpText>
        <label>Initial Source Client2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Initial_Source_Client</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Tax_Consults_Date__c</fullName>
        <label>Initial Tax Consults Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Tax_Consults__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Tax Consults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Status with ARS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Policy in Force</fullName>
                </value>
                <value>
                    <fullName>Future Interest</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KMS_Date__c</fullName>
        <label>KMS Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KMS_Deliverable_Conga_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[QueryCT]a100B00000D46s7,[Entity]a100B00000D46uI,[Project]a100B00000D46vB,[CreditCard]a100B00000D46vu,[Sale]a100B00000D46wJ,[Blueprint1]a106f00000LblZW,[blueprint2]a106f00000LblZg&quot; + 
&quot;&amp;defaultpdf=0&quot; + 
&quot;&amp;templateid=a0z6f00000QfTS7&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; - {Template.Label}&quot; +
&quot;&amp;ac0=1&quot; + 
&quot;&amp;ac2=1&quot; +
&quot;&amp;qmode=SalesforceFile&quot; + 
&quot;&amp;ContentNetworkID=&quot; + Network_ID_Of_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KMS Deliverable Conga Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KMS_Deliverable_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KMS Deliverable Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_More_Solution_Notes__c</fullName>
        <label>Keep More Solution Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LC_ImageURL__c</fullName>
        <description>External image used to display in Platinum Portal</description>
        <label>Client Success Coordinator URL</label>
        <length>192</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LC_email__c</fullName>
        <label>Client Success Coordinator Email</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LC_ext__c</fullName>
        <label>Client Success Coordinator Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Q_URL__c</fullName>
        <description>Creates a unique Q for the Client</description>
        <formula>HYPERLINK(&quot;https://andersonadvisors.formstack.com/forms/llcq?account_number=&quot;&amp; Account_Number__c &amp; &quot;&amp;User_Submitted=&quot; &amp; User__c, &quot;Click Here to Create New Q&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online Q&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Largest_Closed_Won_Sale__c</fullName>
        <description>Used for reporting purposes only</description>
        <label>Largest Closed Won Sale</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Entity Formation, Tax Compliance</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Fulfillment/Partial Payment, Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Closed_Sale_Date__c</fullName>
        <description>Date of most recent transaction that was &apos;Approved&apos; and &apos;Charge&apos;, excluding Platinum Subscription and Bookkeeping Subscription transactions.</description>
        <inlineHelpText>Date of most recent transaction that was &apos;Approved&apos; and &apos;Charge&apos;, excluding Platinum Subscription and Bookkeeping Subscription transactions.</inlineHelpText>
        <label>Last Closed Sale Date</label>
        <summarizedField>Opportunity.Last_Transaction__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Platinum Subscription, Bookkeeping Subscription</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_NPS_Sent__c</fullName>
        <label>Last NPS Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Platinum_Transaction__c</fullName>
        <label>Last Platinum Transaction</label>
        <summarizedField>Opportunity.Last_Transaction__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Has_Platinum_Subscription_Sale__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Survey_Sent__c</fullName>
        <description>Records the date/time the last renewal survey was sent to the client.</description>
        <label>Last Renewal Survey Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Sale_Campaign__c</fullName>
        <inlineHelpText>Stores the campaign Id for the most recent event that provided an internal offer.</inlineHelpText>
        <label>Last Sale Campaign</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Survey_Sent__c</fullName>
        <description>Records the date/time the last law survey was sent to the client.</description>
        <label>Last Law Survey Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Tax_Survey_Sent__c</fullName>
        <description>Records the date/time the last tax survey was sent to the client.</description>
        <label>Last Tax Survey Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Transaction__c</fullName>
        <label>Last Transaction</label>
        <summarizedField>Opportunity.Last_Transaction__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Law_Client_Level__c</fullName>
        <label>Law - Client Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 (&gt;10 Entities)</fullName>
                </value>
                <value>
                    <fullName>2 (6-10 Entities)</fullName>
                </value>
                <value>
                    <fullName>3 (3-5 Entities)</fullName>
                </value>
                <value>
                    <fullName>4 (&lt; 3 Entities)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Law_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Law Coordinator assigned to most recent Case.</inlineHelpText>
        <label>Client Success Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Created_By__c</fullName>
        <label>Lead Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <label>Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Days_to_Close__c</fullName>
        <formula>Datevalue (CreatedDate) - Datevalue ( Lead_Created_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <label>Lead Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sales_Rep__c</fullName>
        <label>Lead Sales Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Platinum_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lifetime Platinum Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>&quot;https://andersonadvisors.my.salesforce.com/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities_Used__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Id , &apos;Account&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Give_Client_for_Online_Q_s__c</fullName>
        <formula>&quot;https://andersonadvisors.formstack.com/forms/llcq?account_number=&quot; + Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Give Client for Online Q&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_the_entity_or_entities_for_which_yo__c</fullName>
        <label>Entity Interested in Bookkeeping Service</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Living_Will_Bundle_Q__c</fullName>
        <formula>&quot;https://andersonadvisors.com/living-will-bundle-questionnaire/?acctclientid=&quot; + Id</formula>
        <label>Living Will Bundle Q</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LucidChart_Blueprint_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LucidChart Blueprint Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BlueprintcreatedBylucidChart</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LucidChart_Blueprint_Created_Date__c</fullName>
        <label>LucidChart Blueprint Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LucidChart_Blueprint_Last_Modified_Date__c</fullName>
        <label>LucidChart Blueprint Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LucidChart_Blueprint_Rating__c</fullName>
        <label>LucidChart Blueprint Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LucidChart_Blueprint_URL__c</fullName>
        <label>LucidChart Blueprint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LucidChart_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LucidChart Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LucidChart_Dataload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LucidChart Dataload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LucidChart_Diagram_Feedback__c</fullName>
        <description>Used during the conversion process to provide feedback about things to fix with the diagrams.</description>
        <label>LucidChart Diagram Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LucidChart_Feedback_By__c</fullName>
        <label>LucidChart Feedback By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LucidChart_Feedback_Date__c</fullName>
        <label>LucidChart Feedback Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LucidChart_Full_Embed_Code__c</fullName>
        <label>LucidChart Full Embed Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LucidChart_Reviewed_Feedback_Assivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LucidChart- Reviewed Feedback(Assivo)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lucidchart_Last_Modified_By__c</fullName>
        <label>Lucidchart Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Forwarding_Type__c</fullName>
        <label>Mail Forwarding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physical Mail Forwarding</fullName>
                </value>
                <value>
                    <fullName>Digital Mail Forwarding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_Forwarding__c</fullName>
        <label>Mail Forwarding</label>
        <summarizedField>Opportunity.Renewal_End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.MailForwarding__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Fulfillment/Partial Payment, Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Main_Campaign__c</fullName>
        <label>Main Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Lead_Source__c</fullName>
        <description>2018 Lead Source used for the general area of where the client came from. The campaign shows specific area.</description>
        <inlineHelpText>2018 Lead Source Main</inlineHelpText>
        <label>Main Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Main_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the client does not wish to receive marketing mail.</inlineHelpText>
        <label>Marketing Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mini_Q__c</fullName>
        <description>Mini Q link</description>
        <formula>&quot;https://andersonadvisors.formstack.com/forms/financial_information?Account_Number=&quot; + Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mini Q</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Incorrect_Info__c</fullName>
        <description>Please use this to choose any that apply.</description>
        <label>Missing/Incorrect Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Advisor</fullName>
                </value>
                <value>
                    <fullName>Missing Law Coordinator</fullName>
                </value>
                <value>
                    <fullName>Missing Accounting Coordinator</fullName>
                </value>
                <value>
                    <fullName>Assigned Incorrect Law Coordinator</fullName>
                </value>
                <value>
                    <fullName>Assigned Incorrect Accounting Coordinator</fullName>
                </value>
                <value>
                    <fullName>Assigned Incorrect Advisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Upload__c</fullName>
        <description>It tracks the most recent uploaded blueprint.</description>
        <label>Blueprint Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Multiple_Primary_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto checked in a nightly batch if/when the account has more than one primary contact.</description>
        <label>Multiple Primary Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_BCP__c</fullName>
        <label>NPS BCP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Bookkeeping__c</fullName>
        <label>NPS Bookkeeping</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Entity_Formation_Sale__c</fullName>
        <label>NPS Entity Formation Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Living_Trust_Date__c</fullName>
        <label>NPS Living Trust Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Platinum_Question__c</fullName>
        <label>NPS Platinum Question</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Platinum_Sale__c</fullName>
        <label>NPS Platinum Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Renewal_Sale__c</fullName>
        <label>NPS Renewal Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Service__c</fullName>
        <label>NPS Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Tax_Case__c</fullName>
        <label>NPS Tax Case</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Welcome_Call__c</fullName>
        <description>Date last NPS survey was sent to client.</description>
        <label>NPS Welcome Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Network_ID_Of_User__c</fullName>
        <formula>CASE( $Profile.Id,
&quot;00e4P000000ydyf&quot;, &quot;0DB4P000000fyj5WAA&quot;,
&quot;00e6f000000SF39&quot;, &quot;0DB6f000000TOB3GAO&quot;,
&quot;00e6f000001IzW2&quot;, &quot;0DB4P000000fyoUWAQ&quot;,
&quot;00e6f000001IzWR&quot;, &quot;0DB6f000000TOAoGAO&quot;,
&quot;00e6f000001IzVi&quot;, &quot;0DB6f000000TOAjGAO&quot;,
&quot;00e6f000000SF2a&quot;, &quot;0DB4P000000fykrWAA&quot;,
&quot;00e6f000001IzWb&quot;, &quot;0DB6f000000TOAtGAO&quot;,
&quot;00e6f000000SF2u&quot;, &quot;0DB4P000000fykwWAA&quot;,
&quot;00e6f000001IzWW&quot;, &quot;0DB4P000000fyojWAA&quot;,
&quot;00e6f000000SEzv&quot;, &quot;0DB4P000000fyj0WAA&quot;,
&quot;00e6f000000SF2k&quot;, &quot;0DB4P000000fyn7WAA&quot;,
&quot;0DB0B0000004EF4WAM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network ID Of User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_C_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New C Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Charitable_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Charitable Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Client_Flow_Stage__c</fullName>
        <label>Client Stage for Anderson System Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Onboarding Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Team Intro Meeting Scheduled (this is the current blueprint walkthrough)</fullName>
                </value>
                <value>
                    <fullName>SOW Prep &amp; Finalize</fullName>
                </value>
                <value>
                    <fullName>SOW In Progress &amp; Meetings Scheduled</fullName>
                </value>
                <value>
                    <fullName>KMS Scheduled</fullName>
                </value>
                <value>
                    <fullName>BCP Quarterly 1st Year</fullName>
                </value>
                <value>
                    <fullName>BCP Quarterly 2nd Year</fullName>
                </value>
                <value>
                    <fullName>BCP Quarterly Add&apos;l Years</fullName>
                </value>
                <value>
                    <fullName>New SOW Prep &amp; Finalize</fullName>
                </value>
                <value>
                    <fullName>New SOW In Progress &amp; Meetings Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Client_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anderson System Team Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_LLC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New LLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_LP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New LP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Living_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Living Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_S_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New S Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Audit__c</fullName>
        <label>Next Scheduled Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nexus_Current__c</fullName>
        <label>Nexus Current</label>
        <summarizedField>Opportunity.Renewal_End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Nexus_Renewal__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Fulfillment/Partial Payment, Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>Used to display the prefereed name the Client would like to use</description>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonProfit_Compliance__c</fullName>
        <formula>If(
Contains( BadgeServiceItems__c , &quot;A52211&quot; ) ,IMAGE(Base_Url__c + &quot;resource/1646855274000/Non_Profit_Badge&quot;, &quot;NonProfitBadge&quot;, 70, 150), &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonProfit Compliance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Profit_Donor_Letter__c</fullName>
        <formula>&quot;https://andersonadvisors.com/donor-letter/?acctclientid=&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Profit Donor Letter</label>
        <type>Text</type>
    </fields>
</CustomObject>